# video_learn

./: build_android_fdk-aac.sh  build_android_ffmpeg.sh  build_android_ffmpeg_with_fdkaac_x264_lame.sh  build_android_lame.sh  build_android_x264.sh
MediaLearn/: build.gradle  settings.gradle
MediaLearn/app/: build.gradle
MediaLearn/app/src/androidTest/java/com/feng/medialearn/: ExampleInstrumentedTest.java
MediaLearn/app/src/main/: AndroidManifest.xml
MediaLearn/app/src/main/cpp/: AVSynchronizer.cpp  AudioFrame.cpp  AudioFrameQueue.cpp  AudioOutput.cpp  CMakeLists.txt  FFplayer.cpp  FengPlayer.cpp  FengPlayer.h  SimpleLame.cpp  SimpleLame.h  VIdeoFrame.cpp  VideoFrameQueue.cpp  VideoOutput.cpp  ffmpegUtil.cpp  ffmpegUtil.h
MediaLearn/app/src/main/cpp/ffplayer/: AVSynchronizer.cpp  AudioFrame.cpp  AudioFrameQueue.cpp  AudioOutput.cpp  CMakeLists.txt  FFplayer.cpp  VIdeoFrame.cpp  VideoFrameQueue.cpp  VideoOutput.cpp
MediaLearn/app/src/main/cpp/include/FFplayer/: AVSynchronizer.h  AudioFrame.h  AudioFrameQueue.h  AudioOutput.h  FFplayer.h  LogCommon.h  VideoDecoder.h  VideoFrame.h  VideoFrameQueue.h  VideoOutput.h
MediaLearn/app/src/main/cpp/lame/: util.h
MediaLearn/app/src/main/java/com/feng/medialearn/: FFmpegUtils.java  FFplayer.java  FengPlayer.java  LameUtils.java  MainActivity.java
MediaLearn/app/src/main/res/layout/: activity_main.xml
MediaLearn/app/src/test/java/com/feng/medialearn/: ExampleUnitTest.java
MediaLearn/ffplayerlibrary/: build.gradle
MediaLearn/ffplayerlibrary/src/main/: AndroidManifest.xml
MediaLearn/ffplayerlibrary/src/main/cpp/: CMakeLists.txt  FFplayer.cpp  FFplayer.h
MediaLearn/gradle/wrapper/: gradle-wrapper.properties
